0024665: A sample for advanced function mechanism Update for Linux platform