samples/qt/FuncDemo/custom.bat
@@ -1,3 +1,3 @@
 @echo off
 rem Define QTDIR variable
-set QTDIR=D:\Qt\4.8.2
+set QTDIR=
